[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/images/KiriFont.otf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/images/kenney_background-elements-redux/Backgrounds/backgroundCastles.png" type="Texture" id=2]
[ext_resource path="res://Quit to Menu.gd" type="Script" id=3]
[ext_resource path="res://Settings.gd" type="Script" id=4]
[ext_resource path="res://OptionButton.gd" type="Script" id=5]
[ext_resource path="res://MusicOption.gd" type="Script" id=6]
[ext_resource path="res://assets/sounds/ButtonClick.mp3" type="AudioStream" id=7]

[sub_resource type="DynamicFont" id=1]
extra_spacing_top = 3
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 10
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=5]
default_font = SubResource( 4 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 10
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=7]
default_font = SubResource( 6 )

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1024.0
margin_bottom = 1024.0
texture = ExtResource( 2 )

[node name="Quit to Menu" type="Button" parent="."]
margin_left = 25.0
margin_top = 525.0
margin_right = 125.0
margin_bottom = 551.0
rect_scale = Vector2( 2, 2 )
focus_neighbour_top = NodePath("../Music/MusicOption")
custom_colors/font_color_focus = Color( 0.901961, 0.85098, 0.0627451, 1 )
custom_colors/font_color_hover = Color( 0.905882, 0.917647, 0.0627451, 1 )
custom_colors/font_color_pressed = Color( 0.176471, 0.164706, 0.164706, 1 )
custom_fonts/font = SubResource( 1 )
text = "BACK"
script = ExtResource( 3 )

[node name="Menu Title" type="Label" parent="."]
margin_left = 275.0
margin_top = 30.0
margin_right = 378.0
margin_bottom = 47.0
rect_scale = Vector2( 5, 5 )
custom_fonts/font = SubResource( 2 )
text = "SETTINGS"

[node name="Options" type="CanvasLayer" parent="."]
layer = 3

[node name="OptionButton" type="OptionButton" parent="Options"]
margin_left = 225.0
margin_top = 190.0
margin_right = 381.0
margin_bottom = 216.0
rect_scale = Vector2( 3, 3 )
focus_neighbour_bottom = NodePath("../../Music/MusicOption")
theme = SubResource( 5 )
custom_colors/font_color_focus = Color( 0.866667, 0.937255, 0.0470588, 1 )
custom_colors/font_color_hover = Color( 0.933333, 0.941176, 0.0705882, 1 )
custom_colors/font_color_pressed = Color( 0.109804, 0.105882, 0.105882, 1 )
custom_fonts/font = SubResource( 3 )
text = "Difficulty: Easy"
items = [ "Difficulty: Easy", null, false, 0, null, "Difficulty: Hard", null, false, 1, null ]
selected = 0
script = ExtResource( 5 )

[node name="Music" type="CanvasLayer" parent="."]
layer = 2

[node name="MusicOption" type="OptionButton" parent="Music"]
margin_left = 240.0
margin_top = 325.0
margin_right = 396.0
margin_bottom = 351.0
rect_scale = Vector2( 3, 3 )
focus_neighbour_top = NodePath("../../Options/OptionButton")
focus_neighbour_bottom = NodePath("../../Quit to Menu")
theme = SubResource( 7 )
custom_colors/font_color_focus = Color( 0.92549, 0.933333, 0.0392157, 1 )
custom_colors/font_color_hover = Color( 0.921569, 0.972549, 0.0431373, 1 )
custom_colors/font_color_pressed = Color( 0.105882, 0.101961, 0.101961, 1 )
custom_fonts/font = SubResource( 3 )
text = "Music: Enabled"
items = [ "Music: Enabled", null, false, 1, null, "Music: Disabled", null, false, 2, null ]
selected = 0
script = ExtResource( 6 )

[node name="ButtonClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[connection signal="pressed" from="Quit to Menu" to="Quit to Menu" method="_on_Quit_to_Menu_pressed"]
[connection signal="hide" from="Options/OptionButton" to="Options/OptionButton" method="_on_OptionButton_hide"]
[connection signal="item_selected" from="Options/OptionButton" to="Options/OptionButton" method="_on_OptionButton_item_selected"]
[connection signal="pressed" from="Options/OptionButton" to="Options/OptionButton" method="_on_OptionButton_pressed"]
[connection signal="item_selected" from="Music/MusicOption" to="Music/MusicOption" method="_on_MusicOption_item_selected"]
[connection signal="pressed" from="Music/MusicOption" to="Music/MusicOption" method="_on_MusicOption_pressed"]
